--- a/2026-02-01-boite-a-outils.html
+++ b/2026-02-01-boite-a-outils.html
@@ -12,16 +12,15 @@ body {
   color: #9fb3a1;
   line-height: 1.6;
 }
+
 h1, h2 {
   color: #cfe3d1;
   text-align: center;
   margin: 0.8em 0;
 }
-h3 {
-  color: #baff9c;
-  margin: 0.6em 0;
-}
-.article-important {
+
+/* Article complet */
+.article-complet {
   border: 2px solid #39ff14;
   box-shadow: 0 0 12px #39ff14;
   padding: 16px;
@@ -29,33 +28,27 @@ h3 {
   background: rgba(124,252,0,0.08);
   color: #baff9c;
 }
-.article-important a {
+
+.article-complet a {
   color: #baff9c;
   text-decoration: underline;
 }
+
 ul {
   padding-left: 18px;
-  list-style-type: none;
 }
+
 li {
   margin: 8px 0;
 }
-.card {
-  border: 1px solid #2a3a32;
-  padding: 12px 14px;
-  margin: 10px 0;
-  background: rgba(50,50,50,0.1);
-}
-.card a {
-  color: #9fb3a1;
-  text-decoration: underline;
-}
+
 .footer {
   margin-top: 40px;
   padding-top: 14px;
   border-top: 1px solid #2a3a32;
   text-align: center;
 }
+
 .footer a {
   display: inline-block;
   margin: 6px 10px;
@@ -64,8 +57,18 @@ li {
   color: #cfe3d1;
   border: 1px solid #3a5a4a;
 }
+
 .footer a:hover {
   background: rgba(100,160,130,0.15);
+}
+
+.section-title {
+  text-align: left;
+  margin-top: 30px;
+  color: #39ff14;
+  font-size: 1.4em;
+  border-bottom: 1px solid #39ff14;
+  padding-bottom: 6px;
 }
 </style>
 </head>
@@ -74,104 +77,241 @@ li {
 <h1>🧰 Boîte à outils Bitcoin</h1>
 <p style="text-align:center; color:#baff9c;">Sélection d’outils Bitcoin, privacy, éducation et culture numérique</p>
 
-<!-- Article important -->
-<div class="article-important">
-<h2>Article important</h2>
-<p>🌐 NEWS & TECHNOLOGIE • Korben<br>
-→ Blog francophone tech, hacking, open source, sécurité, vie privée<br>
-🔗 <a href="https://korben.info/" target="_blank">korben.info</a></p>
-</div>
+<div class="article-complet">
+
+<!-- Éducation & Culture -->
+<h2 class="section-title">📚 Éducation & Culture</h2>
+<ul>
+<li>🌐 NEWS & TECHNOLOGIE • Korben<br>
+→ Blog francophone tech, hacking, open source et vie privée<br>
+🔗 <a href="https://korben.info/" target="_blank">korben.info</a></li>
+
+<li>🎬 CULTURE & ÉDUCATION • WikiFlix<br>
+→ Streaming films domaine public, documentaires et archives<br>
+🔗 <a href="https://wikiflix.toolforge.org/#/" target="_blank">wikiflix.toolforge.org</a></li>
+
+<li>🛠️ OUTILS ÉDUCATIFS • MathAcademy Cyan<br>
+→ Plateforme interactive pour les mathématiques<br>
+🔗 <a href="https://mathacademy-cyan.vercel.app/" target="_blank">mathacademy-cyan.vercel.app</a></li>
+
+<li>🌌 SCIENCE & ESPACE • Astronomy Picture of the Day (APOD)<br>
+→ Image astronomique quotidienne, archives NASA<br>
+🔗 <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">apod.nasa.gov</a></li>
+
+<li>🌐 ÉDUCATION & ANALYSE • Politiscales<br>
+→ Outil d’analyse politique interactif<br>
+🔗 <a href="https://politiscales.fr/" target="_blank">politiscales.fr</a></li>
+
+<li>🌐 ÉDUCATION & GÉOGRAPHIE • TerraGuessr<br>
+→ Globe 3D interactif sur inégalités mondiales<br>
+🔗 <a href="https://terraguessr.org/" target="_blank">terraguessr.org</a></li>
+</ul>
 
 <!-- Privacy & Sécurité -->
-<h2 id="privacy">🔒 Privacy & Sécurité</h2>
+<h2 class="section-title">🔒 Privacy & Sécurité</h2>
 <ul>
-<li class="card">Privacy Guides → Recommandations privacy-first, guides pratiques. 🔗 <a href="https://privacyguides.org" target="_blank">privacyguides.org</a></li>
-<li class="card">OnlinePrivacy.io — Privacy 101 → Formation gratuite confidentialité, menaces numériques, VPN, messagerie. 🔗 <a href="https://onlineprivacy.io" target="_blank">onlineprivacy.io</a></li>
-<li class="card">National Cybersecurity Alliance → Ressources cybersécurité grand public. 🔗 <a href="https://staysafeonline.org" target="_blank">staysafeonline.org</a></li>
-<li class="card">PrivacyTools.io → Alternatives privacy-first, protection contre surveillance. 🔗 <a href="https://www.privacytools.io" target="_blank">privacytools.io</a></li>
-<li class="card">OrigamiVault → Chiffrement pour sauvegarde papier, offline. 🔗 <a href="https://origamivault.com" target="_blank">origamivault.com</a></li>
-<li class="card">Have I Been Pwned → Vérification fuites emails, alertes automatiques. 🔗 <a href="https://haveibeenpwned.com" target="_blank">haveibeenpwned.com</a></li>
-<li class="card">CyberSécurité — Orange → Guides phishing, arnaques, sensibilisation. 🔗 <a href="https://cybersecurite.orange.fr" target="_blank">cybersecurite.orange.fr</a></li>
-<li class="card">Fuites d’infos → Comprendre les fuites de données. 🔗 <a href="https://christopheboutry.com/fuites-infos/" target="_blank">christopheboutry.com/fuites-infos</a></li>
+<li>🔒 Privacy Guides<br>
+→ Recommandations et guides privacy-first<br>
+🔗 <a href="https://privacyguides.org" target="_blank">privacyguides.org</a></li>
+
+<li>🔒 OnlinePrivacy.io — Privacy 101<br>
+→ Formation gratuite sur la confidentialité numérique<br>
+🔗 <a href="https://onlineprivacy.io" target="_blank">onlineprivacy.io</a></li>
+
+<li>🔒 National Cybersecurity Alliance<br>
+→ Ressources cybersécurité pour le grand public<br>
+🔗 <a href="https://staysafeonline.org" target="_blank">staysafeonline.org</a></li>
+
+<li>🔒 PrivacyTools.io<br>
+→ Guide privacy-first et alternatives sécurisées<br>
+🔗 <a href="https://www.privacytools.io" target="_blank">privacytools.io</a></li>
+
+<li>🔒 OrigamiVault<br>
+→ Chiffrement pour sauvegarde papier hors ligne<br>
+🔗 <a href="https://origamivault.com" target="_blank">origamivault.com</a></li>
+
+<li>🔒 Have I Been Pwned<br>
+→ Vérification des fuites d’emails<br>
+🔗 <a href="https://haveibeenpwned.com" target="_blank">haveibeenpwned.com</a></li>
+
+<li>🔒 CyberSécurité — Orange<br>
+→ Guides phishing et arnaques<br>
+🔗 <a href="https://cybersecurite.orange.fr" target="_blank">cybersecurite.orange.fr</a></li>
+
+<li>🔒 Fuites d’infos<br>
+→ Comprendre les fuites de données<br>
+🔗 <a href="https://christopheboutry.com/fuites-infos/" target="_blank">christopheboutry.com/fuites-infos/</a></li>
 </ul>
 
 <!-- Wallets & Paiements Bitcoin -->
-<h2 id="wallets">💰 Wallets & Paiements Bitcoin</h2>
+<h2 class="section-title">💰 Wallets & Paiements Bitcoin</h2>
 <ul>
-<li class="card">Proton Wallet → Wallet simple intégré Proton. 🔗 <a href="https://proton.me/wallet" target="_blank">proton.me/wallet</a></li>
-<li class="card">Blitz Wallet → Wallet non-custodial Lightning. 🔗 <a href="https://blitzwalletapp.com/u/Komainu" target="_blank">blitzwalletapp.com</a></li>
-<li class="card">Bull Wallet / Bull Bitcoin → Wallet non-custodial + Lightning. 🔗 <a href="https://app.bullbitcoin.com/registration/famas" target="_blank">bullbitcoin.com</a></li>
-<li class="card">Peach Bitcoin → Achat/vente P2P sans KYC. 🔗 <a href="https://peachbitcoin.com/fr/referral?code=PR5CE3" target="_blank">peachbitcoin.com</a></li>
-<li class="card">P2P.Band → Agrégateur P2P Bitcoin. 🔗 <a href="https://p2p.band" target="_blank">p2p.band</a></li>
-<li class="card">WalletWallet → Gestion cartes fidélité Apple Wallet. 🔗 <a href="https://walletwallet.alen.ro/" target="_blank">walletwallet.alen.ro</a></li>
-<li class="card">Krux → Signature Bitcoin open source, PSBT & multisig. 🔗 <a href="https://selfcustody.github.io/krux/" target="_blank">selfcustody.github.io/krux</a></li>
-</ul>
+<li>💰 Proton Wallet<br>
+→ Wallet intégré Proton, simple pour débutants<br>
+🔗 <a href="https://proton.me/wallet" target="_blank">proton.me/wallet</a></li>
 
-<!-- Éducation & Analyse -->
-<h2 id="education">🌐 Éducation & Analyse</h2>
-<ul>
-<li class="card">Politiscales → Analyse politique interactive. 🔗 <a href="https://politiscales.fr/" target="_blank">politiscales.fr</a></li>
-<li class="card">TerraGuessr → Globe 3D interactif inégalités mondiales. 🔗 <a href="https://terraguessr.org/" target="_blank">terraguessr.org</a></li>
-<li class="card">MathAcademy Cyan → Plateforme interactive mathématiques. 🔗 <a href="https://mathacademy-cyan.vercel.app/" target="_blank">mathacademy-cyan.vercel.app</a></li>
-<li class="card">Astronomy Picture of the Day (APOD) → Image quotidienne NASA. 🔗 <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">apod.nasa.gov</a></li>
-<li class="card">WikiFlix → Streaming films domaine public. 🔗 <a href="https://wikiflix.toolforge.org/#/" target="_blank">wikiflix.toolforge.org</a></li>
+<li>💰 Blitz Wallet<br>
+→ Wallet non-custodial Lightning<br>
+🔗 <a href="https://blitzwalletapp.com/u/Komainu" target="_blank">blitzwalletapp.com</a></li>
+
+<li>💰 Bull Wallet / Bull Bitcoin<br>
+→ Wallet non-custodial + Lightning<br>
+🔗 <a href="https://app.bullbitcoin.com/registration/famas" target="_blank">bullbitcoin.com</a></li>
+
+<li>💰 Peach Bitcoin<br>
+→ Achat/vente P2P sans KYC<br>
+🔗 <a href="https://peachbitcoin.com/fr/referral?code=PR5CE3" target="_blank">peachbitcoin.com</a></li>
+
+<li>💰 P2P.Band<br>
+→ Agrégateur P2P Bitcoin<br>
+🔗 <a href="https://p2p.band" target="_blank">p2p.band</a></li>
+
+<li>💰 WalletWallet<br>
+→ Gestion cartes fidélité Apple Wallet<br>
+🔗 <a href="https://walletwallet.alen.ro/" target="_blank">walletwallet.alen.ro</a></li>
 </ul>
 
 <!-- Boutiques Bitcoin -->
-<h2 id="boutiques">💰 Boutiques Bitcoin</h2>
+<h2 class="section-title">🛒 Boutiques Bitcoin</h2>
 <ul>
-<li class="card">B Market 21 → Boutique Bitcoin-friendly. 🔗 <a href="https://bmarket21.com/" target="_blank">bmarket21.com</a></li>
-<li class="card">Sulina Derm → Soins naturels Bitcoin. 🔗 <a href="https://sulinaderm.com/" target="_blank">sulinaderm.com</a></li>
-<li class="card">Drink Bob → Boissons et accessoires Bitcoin. 🔗 <a href="https://drink-bob.com/" target="_blank">drink-bob.com</a></li>
-<li class="card">BitcoinStore → Matériel, livres, accessoires Bitcoin. 🔗 <a href="https://bitcoinstore.fr/" target="_blank">bitcoinstore.fr</a></li>
-<li class="card">BitcoinBook → Boutique en ligne Bitcoin. 🔗 <a href="https://bitcoinbook.shop/collections/french" target="_blank">bitcoinbook.shop</a></li>
-<li class="card">Bitcoin Bazar → Boutique physique et en ligne Bitcoin. 🔗 <a href="https://bitcoinbazar.fr/" target="_blank">bitcoinbazar.fr</a></li>
+<li>💰 B Market 21<br>
+→ Boutique Bitcoin-friendly en ligne<br>
+🔗 <a href="https://bmarket21.com/" target="_blank">bmarket21.com</a></li>
+
+<li>💰 Sulina Derm<br>
+→ Soins naturels avec paiement Bitcoin<br>
+🔗 <a href="https://sulinaderm.com/" target="_blank">sulinaderm.com</a></li>
+
+<li>💰 Drink Bob<br>
+→ Boissons et accessoires Bitcoin<br>
+🔗 <a href="https://drink-bob.com/" target="_blank">drink-bob.com</a></li>
+
+<li>💰 BitcoinStore<br>
+→ Matériel, livres et accessoires Bitcoin<br>
+🔗 <a href="https://bitcoinstore.fr/" target="_blank">bitcoinstore.fr</a></li>
+
+<li>💰 BitcoinBook<br>
+→ Boutique en ligne Bitcoin<br>
+🔗 <a href="https://bitcoinbook.shop/collections/french" target="_blank">bitcoinbook.shop</a></li>
+
+<li>💰 Bitcoin Bazar<br>
+→ Boutique physique et en ligne Bitcoin<br>
+🔗 <a href="https://bitcoinbazar.fr/" target="_blank">bitcoinbazar.fr</a></li>
 </ul>
 
-<!-- Outils divers -->
-<h2 id="tools">🛠️ Outils divers</h2>
+<!-- Réseaux décentralisés & Social -->
+<h2 class="section-title">🌐 Réseaux décentralisés & Social</h2>
 <ul>
-<li class="card">Lasagna Beats → Beats et loops. 🔗 <a href="https://beats.lasagna.pizza/" target="_blank">beats.lasagna.pizza</a></li>
-<li class="card">Strudel → Manipulation audio en ligne. 🔗 <a href="https://strudel.cc/#JDogcygiW2JkIDxoaCBvaD5dKjIiKS5iYW5rKCJ0cjkwOSIpLmRlYyguNCk%3D" target="_blank">strudel.cc</a></li>
-<li class="card">LoopMaster → Création boucles audio. 🔗 <a href="https://loopmaster.xyz/" target="_blank">loopmaster.xyz</a></li>
-<li class="card">Textarea → Éditeur texte léger. 🔗 <a href="https://textarea.my/#VY9NTgMxDIX3PcVjA" target="_blank">textarea.my</a></li>
-<li class="card">Untype → Créer/éditer contenu sans code. 🔗 <a href="https://untype.app/" target="_blank">untype.app</a></li>
-<li class="card">Futurepedia → Répertoire outils IA. 🔗 <a href="https://future-pedia.com/fr/" target="_blank">future-pedia.com</a></li>
-<li class="card">Neocities → Hébergement sites web. 🔗 <a href="https://neocities.org/" target="_blank">neocities.org</a></li>
-<li class="card">Loot Drop → Projets abandonnés. 🔗 <a href="https://www.loot-drop.io/" target="_blank">loot-drop.io</a></li>
-<li class="card">QrCode Draw (Swtch) → Générateur QR code avancé. 🔗 <a href="https://research.swtch.com/qr/draw/" target="_blank">research.swtch.com/qr/draw</a></li>
-<li class="card">itoa.hex.dance → Convertisseur nombres. 🔗 <a href="https://itoa.hex.dance/" target="_blank">itoa.hex.dance</a></li>
-<li class="card">json2map → Visualisation JSON. 🔗 <a href="https://www.json2map.com/" target="_blank">json2map.com</a></li>
-<li class="card">OmniTools → Outils productivité web. 🔗 <a href="https://omnitools.app/" target="_blank">omnitools.app</a></li>
-<li class="card">Awesome AI for Science → Répertoire IA scientifique. 🔗 <a href="https://zdoc.app/en/ai-boost/awesome-ai-for-science" target="_blank">zdoc.app</a></li>
-<li class="card">Tibillet → Billetterie coopérative open-source. 🔗 <a href="https://tibillet.org/fr/" target="_blank">tibillet.org</a></li>
-<li class="card">Aesty Covers → Génération visuels de couverture. 🔗 <a href="https://covers.aesty.ai/" target="_blank">covers.aesty.ai</a></li>
-<li class="card">iOS App → Application mobile utilitaires. 🔗 <a href="https://apps.apple.com/app/id1049254261" target="_blank">apps.apple.com</a></li>
-<li class="card">Be-BOP → Monétisation éthique open-source. 🔗 <a href="https://be-bop.io/home" target="_blank">be-bop.io</a></li>
-<li class="card">Mempool.space → Explorateur Bitcoin. 🔗 <a href="https://mempool.space/fr/" target="_blank">mempool.space</a></li>
-<li class="card">Timechain Calendar → Données réseau & halving. 🔗 <a href="https://timechaincalendar.com" target="_blank">timechaincalendar.com</a></li>
-<li class="card">Clark Moody Dashboard → Vue globale Bitcoin. 🔗 <a href="https://dashboard.clarkmoody.com" target="_blank">dashboard.clarkmoody.com</a></li>
-<li class="card">Wicked Smart Bitcoin → Visualisations avancées. 🔗 <a href="https://wickedsmartbitcoin.com" target="_blank">wickedsmartbitcoin.com</a></li>
-<li class="card">bitbo.io → Dashboard Bitcoin mining & réseau. 🔗 <a href="https://bitbo.io" target="_blank">bitbo.io</a></li>
+<li>🌍 Club Orange<br>
+→ Réseau social Bitcoiners mondial<br>
+🔗 <a href="https://signup.cluborange.org/co/famas" target="_blank">signup.cluborange.org</a></li>
+
+<li>🌐 Nostr<br>
+→ Protocole ouvert et décentralisé<br>
+🔗 <a href="https://nostr.fr/" target="_blank">nostr.fr</a></li>
+
+<li>🌐 NostrZap<br>
+→ Interface Nostr<br>
+🔗 <a href="https://www.nostrzap.com/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">nostrzap.com</a></li>
+
+<li>🌐 ProfileStr<br>
+→ Gestion identité Nostr<br>
+🔗 <a href="https://profilestr.com/profile/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">profilestr.com</a></li>
+
+<li>🌐 Flare<br>
+→ Agrégateur Nostr, Mastodon, Bluesky<br>
+🔗 <a href="https://flareapp.moe/" target="_blank">flareapp.moe</a></li>
 </ul>
 
-<!-- Réseaux sociaux / Décentralisés -->
-<h2 id="networks">🌐 Réseaux sociaux / Décentralisés</h2>
+<!-- Outils divers & Dashboards -->
+<h2 class="section-title">🛠️ Outils divers & Dashboards</h2>
 <ul>
-<li class="card">Club Orange → Réseau social Bitcoiners. 🔗 <a href="https://signup.cluborange.org/co/famas" target="_blank">signup.cluborange.org</a></li>
-<li class="card">Nostr → Protocole décentralisé. 🔗 <a href="https://nostr.fr/" target="_blank">nostr.fr</a></li>
-<li class="card">NostrZap → Interface Nostr. 🔗 <a href="https://www.nostrzap.com/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">nostrzap.com</a></li>
-<li class="card">ProfileStr → Gestion identité Nostr. 🔗 <a href="https://profilestr.com/profile/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">profilestr.com</a></li>
-<li class="card">Flare → Agrégateur Nostr, Mastodon, Bluesky. 🔗 <a href="https://flareapp.moe/" target="_blank">flareapp.moe</a></li>
+<li>🎵 Lasagna Beats<br>
+→ Beats et loops pour production musicale<br>
+🔗 <a href="https://beats.lasagna.pizza/" target="_blank">beats.lasagna.pizza</a></li>
+
+<li>🎵 Strudel<br>
+→ Exploration et manipulation audio<br>
+🔗 <a href="https://strudel.cc/#JDogcygiW2JkIDxoaCBvaD5dKjIiKS5iYW5rKCJ0cjkwOSIpLmRlYyguNCk%3D" target="_blank">strudel.cc</a></li>
+
+<li>🎵 LoopMaster<br>
+→ Création et édition de boucles audio<br>
+🔗 <a href="https://loopmaster.xyz/" target="_blank">loopmaster.xyz</a></li>
+
+<li>🛠️ Loot Drop<br>
+→ Cimetière projets abandonnés<br>
+🔗 <a href="https://www.loot-drop.io/" target="_blank">loot-drop.io</a></li>
+
+<li>🛠️ Textarea<br>
+→ Éditeur texte léger et rapide<br>
+🔗 <a href="https://textarea.my/#VY9NTgMxDIX3PcVjA" target="_blank">textarea.my</a></li>
+
+<li>🛠️ Untype<br>
+→ Créer/éditer contenu sans code<br>
+🔗 <a href="https://untype.app/" target="_blank">untype.app</a></li>
+
+<li>🛠️ Futurepedia<br>
+→ Répertoire outils IA<br>
+🔗 <a href="https://future-pedia.com/fr/" target="_blank">future-pedia.com</a></li>
+
+<li>🛠️ QrCode Draw (Swtch)<br>
+→ Générateur QR codes avancé<br>
+🔗 <a href="https://research.swtch.com/qr/draw/" target="_blank">research.swtch.com/qr/draw</a></li>
+
+<li>🛠️ itoa.hex.dance<br>
+→ Convertisseur nombres<br>
+🔗 <a href="https://itoa.hex.dance/" target="_blank">itoa.hex.dance</a></li>
+
+<li>🛠️ Neocities<br>
+→ Hébergement sites web<br>
+🔗 <a href="https://neocities.org/" target="_blank">neocities.org</a></li>
+
+<li>🛠️ json2map<br>
+→ Visualisation arborescente JSON<br>
+🔗 <a href="https://www.json2map.com/" target="_blank">json2map.com</a></li>
+
+<li>🛠️ OmniTools<br>
+→ Utilitaires productivité web<br>
+🔗 <a href="https://omnitools.app/" target="_blank">omnitools.app</a></li>
+
+<li>🛠️ Awesome AI for Science<br>
+→ Répertoire IA scientifique<br>
+🔗 <a href="https://zdoc.app/en/ai-boost/awesome-ai-for-science" target="_blank">zdoc.app/en/ai-boost/awesome-ai-for-science</a></li>
+
+<li>🛠️ Tibillet<br>
+→ Billetterie coopérative open source<br>
+🔗 <a href="https://tibillet.org/fr/" target="_blank">tibillet.org</a></li>
+
+<li>🛠️ Aesty Covers<br>
+→ Génération visuels de couverture<br>
+🔗 <a href="https://covers.aesty.ai/" target="_blank">covers.aesty.ai</a></li>
+
+<li>📊 Mempool.space<br>
+→ Explorateur Bitcoin<br>
+🔗 <a href="https://mempool.space/fr/" target="_blank">mempool.space</a></li>
+
+<li>📊 Timechain Calendar<br>
+→ Données réseau & halving Bitcoin<br>
+🔗 <a href="https://timechaincalendar.com" target="_blank">timechaincalendar.com</a></li>
+
+<li>📊 Clark Moody Dashboard<br>
+→ Vue globale Bitcoin<br>
+🔗 <a href="https://dashboard.clarkmoody.com" target="_blank">dashboard.clarkmoody.com</a></li>
+
+<li>📊 Wicked Smart Bitcoin<br>
+→ Visualisations avancées Bitcoin<br>
+🔗 <a href="https://wickedsmartbitcoin.com" target="_blank">wickedsmartbitcoin.com</a></li>
+
+<li>📊 bitbo.io<br>
+→ Dashboard mining et réseau<br>
+🔗 <a href="https://bitbo.io" target="_blank">bitbo.io</a></li>
+
+<li>🛠️ Be‑BOP<br>
+→ Monétisation éthique, billetterie, peerfunding, intégration Bitcoin/Lightning<br>
+🔗 <a href="https://be-bop.io/home" target="_blank">be-bop.io</a></li>
 </ul>
 
-<!-- Répertoires Bitcoin -->
-<h2 id="directories">📚 Répertoires Bitcoin</h2>
-<ul>
-<li class="card">BTC Directory → Annuaire Bitcoin FR & internat. 🔗 <a href="https://btcdir.org/" target="_blank">btcdir.org</a></li>
-<li class="card">Bitzy → Annuaire Bitcoin & crypto. 🔗 <a href="https://www.bitzy.com/" target="_blank">bitzy.com</a></li>
-<li class="card">KYCnot.me → Services crypto sans KYC. 🔗 <a href="https://kycnot.me/" target="_blank">kycnot.me</a></li>
-</ul>
+</div>
 
 <div class="footer">
   <a href="#top">↑ Haut de page</a> ·
