Add header image for Bitcoin toolbox page

--- a/2026-02-01-boite-a-outils.html
+++ b/2026-02-01-boite-a-outils.html
@@ -74,6 +74,11 @@ li {
 </head>
 <body id="top">
 
+  <!-- Image d'en-tête -->
+<div style="text-align:center; margin:20px 0;">
+  <img src="/Outils.JPG" alt="Boîte à outils Bitcoin" style="max-width:100%; height:auto; border-radius:6px; box-shadow:0 0 12px #39ff14;">
+</div>
+
 <h1>🧰 Boîte à outils Bitcoin</h1>
 <p style="text-align:center; color:#baff9c;">Sélection d’outils Bitcoin, privacy, éducation et culture numérique</p>
 
