Add 'About Famas' section to index.html
Added an 'About Famas' section with details on Bitcoin and digital sovereignty tools.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,27 @@ h1, h2 {
   </p>
 </div>
 
+<!-- Carte About Famas -->
+<div class="card">
+  <h2>About Famas — Franck f®@n©️< Satopolys</h2>
+
+  <p>
+    Parcours, identité et certifications autour de Bitcoin, Nostr et des outils
+    de souveraineté numérique.
+  </p>
+
+  <ul>
+    <li>Présentation & philosophie</li>
+    <li>Identité Nostr (npub, NIP-05, LN)</li>
+    <li>Certifications Plan B Academy</li>
+    <li>Liens publics & contact</li>
+  </ul>
+
+  <p>
+    <a href="2026-02-01-about-me.html">→ Lire l’article</a>
+  </p>
+</div>
+  
 <!-- ARTICLE COURANT – Créer une association Bitcoin -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
