Update styling and section titles in index.html

--- a/index.html
+++ b/index.html
@@ -17,23 +17,18 @@ body{
 h1{
   text-align:center;
   color:#7CFF7C;
-  margin-bottom:6px;
-}
-
-h2{
-  color:#cfe3d1;
-  margin-top:0;
+  margin:12px 0 6px;
 }
 
 .section-title{
-  margin:28px 0 12px;
+  margin:30px 0 14px;
   color:#39ff14;
   font-size:1.4em;
   border-bottom:1px solid #39ff14;
   padding-bottom:6px;
 }
 
-/* CARTES IMPORTANTES */
+/* BASE DE CONNAISSANCES */
 .article-complet{
   border:2px solid #39ff14;
   box-shadow:0 0 12px #39ff14;
@@ -48,7 +43,7 @@ h2{
   text-decoration:underline;
 }
 
-/* CARTES COURANTES */
+/* ARTICLES COURANTS */
 .article{
   border:1px solid #5f8f7a;
   padding:14px;
@@ -96,17 +91,23 @@ h2{
 
 <body id="top">
 
+<!-- Image d’accueil -->
+<div style="text-align:center; margin:20px 0;">
+  <img src="/Komainu.PNG" alt="Komainu"
+       style="max-width:100%; height:auto; border-radius:6px;">
+</div>
+
 <h1>Bitcoin vu par Famas</h1>
 
-<!-- ================= ARTICLES IMPORTANTS ================= -->
-<div class="section-title">Articles importants</div>
+<!-- ================= BASE DE CONNAISSANCES ================= -->
+<div class="section-title">Base de connaissances</div>
 
 <!-- 1 — Boîte à outils -->
 <div class="article-complet">
   <h2>🧰 Boîte à outils Bitcoin</h2>
   <p>
-    Sélection d’outils Bitcoin, privacy, éducation, wallets,
-    réseaux décentralisés et dashboards.
+    Sélection d’outils Bitcoin, privacy, éducation,
+    wallets, réseaux décentralisés et dashboards.
   </p>
   <a href="boite-a-outils-bitcoin.html">→ Accéder à la boîte à outils</a>
 </div>
@@ -132,8 +133,8 @@ h2{
   <a href="2026-02-01-about-me.html">→ Lire l’article About.me</a>
 </div>
 
-<!-- ================= ARTICLES COURANTS ================= -->
-<div class="section-title">Articles courants</div>
+<!-- ================= ARTICLES ================= -->
+<div class="section-title">Articles</div>
 
 <!-- 4 — Bitcoin islam -->
 <div class="article">
