Update section numbers and titles in index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,18 @@ h1{
 <!-- ================= BASE DE CONNAISSANCES ================= -->
 <div class="section-title">Base de connaissances</div>
 
-<!-- 1 — Boîte à outils -->
+<!-- 1 — Base de connaissances -->
+<div class="article-complet">
+  <h2>🧠 Base de connaissances Bitcoin — Famas</h2>
+  <p>
+    Ressources centralisées sur Bitcoin : analyses monétaires, inflation, 
+    fonctionnement du réseau, tutoriels, bibliothèque, formations gratuites 
+    et certifications PlanB Academy. Idéal pour apprentissage autonome et approfondissement.
+  </p>
+  <a href="2026-02-01-base-connaissances.html">→ Lire l’article complet</a>
+</div>
+
+<!-- 2 — Boîte à outils -->
 <div class="article-complet">
   <h2>🧰 Boîte à outils Bitcoin</h2>
   <p>
@@ -112,7 +123,7 @@ h1{
   <a href="boite-a-outils-bitcoin.html">→ Accéder à la boîte à outils</a>
 </div>
 
-<!-- 2 — Bibliothèque -->
+<!-- 3 — Bibliothèque -->
 <div class="article-complet">
   <h2>📚 Bibliothèque Bitcoin & Économie 🇦🇹</h2>
   <p>
@@ -122,7 +133,7 @@ h1{
   <a href="bibliotheque-bitcoin-autrichienne.html">→ Accéder à la bibliothèque</a>
 </div>
 
-<!-- 3 — About Me -->
+<!-- 4 — About Me -->
 <div class="article-complet">
   <h2>👤 About Famas — Franck f®@n©️&lt; Satopolys</h2>
   <p>
@@ -136,7 +147,7 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
-<!-- 4 — Bitcoin islam -->
+<!-- 5 — Bitcoin islam -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
   <strong>
@@ -150,7 +161,7 @@ h1{
   </p>
 </div>
 
-<!-- 5 — Association -->
+<!-- 6 — Association -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
   <strong>
