Update section titles and content in index.html

--- a/index.html
+++ b/index.html
@@ -99,16 +99,15 @@ h1{
 
 <h1>Bitcoin vu par Famas</h1>
 
-<!-- ================= BASE DE CONNAISSANCES ================= -->
-<div class="section-title">Base de connaissances</div>
+<!-- ================= RESSOURCES ================= -->
+<div class="section-title">Ressources</div>
 
 <!-- 1 — Base de connaissances -->
 <div class="article-complet">
-  <h2>🧠 Base de connaissances Bitcoin — Famas</h2>
+  <h2>🧠 Base de connaissances Bitcoin</h2>
   <p>
-    Ressources centralisées sur Bitcoin : analyses monétaires, inflation, 
-    fonctionnement du réseau, tutoriels, bibliothèque, formations gratuites 
-    et certifications PlanB Academy. Idéal pour apprentissage autonome et approfondissement.
+    Ressources pédagogiques complètes : analyse économique, Bitcoin & inflation,
+    tutoriels, cours gratuits et certificats PlanB Academy, quiz interactifs et lectures approfondies.
   </p>
   <a href="2026-02-01-base-connaissances.html">→ Lire l’article complet</a>
 </div>
@@ -133,7 +132,7 @@ h1{
   <a href="bibliotheque-bitcoin-autrichienne.html">→ Accéder à la bibliothèque</a>
 </div>
 
-<!-- 4 — About Me -->
+<!-- 4 — About Famas -->
 <div class="article-complet">
   <h2>👤 About Famas — Franck f®@n©️&lt; Satopolys</h2>
   <p>
@@ -180,4 +179,4 @@ h1{
 </div>
 
 </body>
-</html>
+</html>p
