Update resource links and section titles in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1{
   padding-bottom:6px;
 }
 
-/* BASE DE CONNAISSANCES */
+/* BASE DE CONNAISSANCES / RESSOURCES */
 .article-complet{
   border:2px solid #39ff14;
   box-shadow:0 0 12px #39ff14;
@@ -106,10 +106,9 @@ h1{
 <div class="article-complet">
   <h2>🧠 Base de connaissances Bitcoin</h2>
   <p>
-    Ressources pédagogiques complètes : analyse économique, Bitcoin & inflation,
-    tutoriels, cours gratuits et certificats PlanB Academy, quiz interactifs et lectures approfondies.
+    Synthèse complète des connaissances Bitcoin : analyses monétaires, bibliothèques, tutoriels et certifications.
   </p>
-  <a href="2026-02-01-base-connaissances.html">→ Lire l’article complet</a>
+  <a href="2026-02-01-base-connaissances.html">→ Accéder à la base de connaissances</a>
 </div>
 
 <!-- 2 — Boîte à outils -->
@@ -119,7 +118,7 @@ h1{
     Sélection d’outils Bitcoin, privacy, éducation,
     wallets, réseaux décentralisés et dashboards.
   </p>
-  <a href="boite-a-outils-bitcoin.html">→ Accéder à la boîte à outils</a>
+  <a href="2026-02-01-boite-a-outils.html">→ Accéder à la boîte à outils</a>
 </div>
 
 <!-- 3 — Bibliothèque -->
@@ -129,7 +128,7 @@ h1{
     Ouvrages fondamentaux : Bitcoin, école autrichienne,
     économie, philosophie et souveraineté.
   </p>
-  <a href="bibliotheque-bitcoin-autrichienne.html">→ Accéder à la bibliothèque</a>
+  <a href="2026-02-01-bibliotheque-bitcoin.html">→ Accéder à la bibliothèque</a>
 </div>
 
 <!-- 4 — About Famas -->
@@ -146,11 +145,11 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
-<!-- 5 — Bitcoin islam -->
+<!-- 5 — Bitcoin et islam -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
   <strong>
-    <a href="bitcoin-droit-islamique.html">
+    <a href="2026-01-30-Islam-et-bitcoin.html">
       Bitcoin en droit islamique : licite ou interdit ?
     </a>
   </strong>
@@ -160,11 +159,11 @@ h1{
   </p>
 </div>
 
-<!-- 6 — Association -->
+<!-- 6 — Association loi 1901 -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
   <strong>
-    <a href="association-bitcoin-loi-1901.html">
+    <a href="2026-01-30-association-bitcoin.html">
       Créer une association Bitcoin (loi 1901)
     </a>
   </strong>
@@ -179,4 +178,4 @@ h1{
 </div>
 
 </body>
-</html>p
+</html>
