Add article section for ASCII Guide
Added a new article section for 'ASCII Guide' with details.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
+<!-- 7 — ASCII Guide -->
+<div class="article">
+  <div class="article-date">01 février 2026</div>
+  <strong>
+    <a href="https://yakihonne.com/article/s/Franck@rizful.com/dbb3d9101458491f" target="_blank">
+      📘 Guide : Maîtriser l’Écriture Texte Structuré en ASCII
+    </a>
+  </strong>
+  <p>
+    Apprenez à structurer, hiérarchiser et mettre en valeur du texte avec ASCII,
+    compatible sur tous les supports : terminal, SMS, email ou site web.
+  </p>
+</div>
+  
 <!-- 5 — Bitcoin et islam -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
