Add article on Proton Wallet usage guide
Added a new article about Proton Wallet with usage guide.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
+<!-- 8 — Proton Wallet -->
+<div class="article">
+  <div class="article-date">01 février 2026</div>
+  <strong>
+    <a href="https://yakihonne.com/article/s/Franck@rizful.com/49659c6859d6ae8e" target="_blank">
+      📄 PROTON WALLET — Guide d’utilisation
+    </a>
+  </strong>
+  <p>
+    Guide complet du portefeuille Bitcoin non-custodial de Proton :
+    auto-garde, modèle de sécurité zero-access et paiements Bitcoin via e-mail,
+    avec un focus sur la facturation professionnelle.
+  </p>
+</div>
+  
 <!-- 7 — ASCII Guide -->
 <div class="article">
   <div class="article-date">01 février 2026</div>
